--- a/index.html
+++ b/index.html
@@ -1,27 +1,14 @@
 <html>
-
  <head> 
-
   <title>by-SH-3</title> 
-
   <meta charset="utf-8"> 
-
  </head> 
-
  <body> 
-
   <p style="margin-top:10px;"></p> 
-
   <img src="1.jpg" width="65%"> 
-
   <p style="margin-top:30"></p> 
-
-  <h1><strong>쾅쾅나무(ilex crenata)</strong></h1> 
-
+  <h1><strong>느티나무(sawleaf Zelkova)</strong></h1> 
   <strong> 
-
-   <newline></newline> <h3>설명</h3> <li>바닷가 옆 산기슭에 자라며 제주•경남에 주로 분포한다</li> <li>높이:3m</li> <li>속씨 식물 쌍떡잎식물강 무환자나무목</li> <li>꽃말:참고 견디어 낼 줄 아는</li> </strong> 
-
+   <newline></newline> <h3>설명</h3> <li>우리나라 대부분의 지역에 자라는 낙엽교목</li> <li>높이:20m</li> <li>쌍떡잎식물 쐐기풀목 느릅나무과</li> <li>꽃말:운명</li> </strong>
  </body>
-
 </html>
