--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-  <title>SH-2</title> 
+  <title>SH-3</title> 
 
   <meta charset="utf-8"> 
 
@@ -17,7 +17,7 @@
 
   <p style="margin-top:30"></p> 
 
-<h1>꽝꽝나무(<font color="green"Ilex crenata</font>)</h1> 
+<h1>느티나무(<font color="green">Zelkova serrata </font>)</h1> 
 
   <newline></newline> 
 
