--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 
-  <title>SH-3</title> 
+  <title>SH-4</title> 
 
   <meta charset="utf-8"> 
 
@@ -11,22 +11,24 @@
 
   <p style="margin-top:10px;"></p> 
 
-  <img src="2.jpg" width="65%">
-   <h5>쌍떡잎식물 무환자나무목 감탕나무과</h5>
+  <img src="3.jpg" width="85%">
+   <h5>쌍떡잎식물 쐐기풀목 느릅나무과</h5>
   <hr></hr>
 
   <p style="margin-top:30"></p> 
 
-<h1>느티나무(<font color="green">Zelkova serrata </font>)</h1> 
+<h1>느티나무(<font color="yellow">Zelkova serrata</font>)</h1> 
 
   <newline></newline> 
 
-  <h3>“바닷가 옆 산기슭에 주로 서식하는 식물”</h3> 
+  <h3>“우리나라 대부분의 지역에 자라는 낙엽교목”</h3> 
 
-  <h4><li><u>높이 3m에 달하는 나무로 나무껍질은 회색이고 가지와 잎은 무성하고 5~6월에 피는 잎겨드랑이에서 나오고 3~7개씩 달리고 퇴화된 암술을 지닌 꽃이 있다.</h4></li> 
-
-  <h4><li>잎은 어긋나고 달걀을 거꾸로 세운 또는 긴 타원 모양으로 양쪽이 뾰족하며 가장자리에 긴 톱니를 가졌으며 잎 길이는 1.5~3cm이며 폭은 1.6~2cm이다,.</h4></li> 
-
+<h4><li><u>높이 약 30m</u>, 지름 약 3m에 달하는 나무로 5월에 피는 가지의 잎겨드랑이에서 난 꽃이 있다.</h4></li> 
+<oi>
+  <h4><li>수꽃 : 4~6장의 꽃덮이조각과 4~6개의 수술</h4></li> 
+  <h4><li>암꽃 : 암술대가 2개로 나누어진 1개의 암술</h4></li> 
+</oi>
+<h4><li>잎은 어긋나고 긴 타원 모양 또는 달걀 모양이며 표면이 매우 거칠거칠하며 끝이 점차 뾰족해지고 길이가 2∼12cm, 폭이 1∼5cm이다.</h4></li>
  </body>
 
 </html>
